# new-optimizer-finding

./: .gitignore  AGENTS.md  FRAMEWORK.md  README.md  dump_llm.py  dump_llm_excerpt.py  pyproject.toml  run.sh
agents/: 10_gpt_followup_instruction_for_finishing_remaining_post_audit_gaps.md  11_full_project_almanac_post_audit_and_platform_expansion.md  1_previous_turn_followup.md  2_followup_chatgpt_api_support.md  3_previous_session_followup.md  4_train_loss_baseline_reward_followup.md  5_comprehensive_code_audit_and_roadmap.md  5_gpt_repository_audit_and_target_gap_analysis.md  6_claude_revision_merged_comprehensive_audit_and_roadmap.md  6_gpt_revision_merged_comprehensive_audit_and_roadmap.md  7_gpt_master_execution_spec_for_optimizer_discovery_platform.md  8_gpt_current_state_reaudit_and_gap_analysis.md  9_gpt_agent_instruction_for_closing_all_remaining_gaps.md
api_platforms/: __init__.py
api_platforms/_core/: __init__.py  broker.py  broker_runner.py  config.py  discovery.py  ipc.py  local_worker.py  providers.py  registry.py  types.py
api_platforms/claude_haiku_45/: __init__.py  platform.py
api_platforms/claude_opus_46/: __init__.py  platform.py
api_platforms/claude_sonnet_46/: __init__.py  platform.py
api_platforms/gemma_4_26b_a4b_it/: __init__.py  platform.py
api_platforms/gemma_4_31b_it/: __init__.py  platform.py
api_platforms/gpt_5_4/: __init__.py  platform.py
api_platforms/gpt_5_4_mini/: __init__.py  platform.py
api_platforms/gpt_5_4_nano/: __init__.py  platform.py
api_platforms/mock/: __init__.py  platform.py
api_platforms/mock_local/: __init__.py  platform.py
api_platforms/ollama_gemma4_26b/: __init__.py  platform.py
api_platforms/ollama_gemma4_31b/: __init__.py  platform.py
conf/: AGENTS.md  config.yaml  config_awtf2025_heuristic.yaml  config_circle_packing_shinka.yaml  config_circle_packing_shinka_ollama_dual.yaml  config_circle_packing_shinka_validate.yaml  config_co-bench.yaml  config_optimization_survey.yaml
conf/evolver/: default.yaml  (+4 more)
experiments/: AGENTS.md
notebooks/: manual_simple_scoring.ipynb
optbench/: AGENTS.md  __init__.py  main.py  registry.py  runner.py  schemas.py
optimizer_guesses/: AGENTS.md
scripts/: bootstrap_cobench.sh  kill_ollama.sh  lib_runtime.sh  run_evolution.sh  run_shinka_baseline.sh  seed_population.sh
src/: AGENTS.md  __init__.py  main.py  runtime_config.py
tests/: AGENTS.md  test_api_platforms.py  test_awtf2025_heuristic.py  test_awtf2025_heuristic_prompts.py  test_bandit.py  test_baselines.py  test_circle_packing_design_prompt_context.py  test_circle_packing_design_prompt_contract.py  test_circle_packing_functional_checks.py  test_circle_packing_genome_render.py  test_circle_packing_genome_schema.py  test_circle_packing_hard_compatibility.py  test_circle_packing_hypothesis_artifacts.py  test_circle_packing_inheritance_units.py  test_circle_packing_module_library.py  test_circle_packing_prompts.py  test_circle_packing_shinka.py  test_circle_packing_slot_decomposition.py  test_circle_packing_soft_compatibility.py  test_circle_packing_typed_novelty_prompt_contract.py  test_co_bench.py  test_comet.py  test_compatibility.py  test_crossbreeding.py  test_evolution_loop_semantics.py  test_evolution_resume.py  test_evolve_integration_fake.py  test_genetic_code_format.py  test_genetic_operators.py  test_hydra_compose.py  test_implementation_patch.py  test_import_optimizer.py  test_islands.py  test_legacy_candidate_integration_fake.py  test_lineage_regime.py  test_manual_pipeline.py  test_metrics_normalization.py  test_mutation_dna.py  test_neyman_allocation.py  test_novelty.py  (+18 more)
valopt/: main.py  optimizer_api.py  registry.py  runner.py
valopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+489 files in other folders)
