[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organism-framework"
version = "0.1.0"
description = "Generic AI-for-science experiment runtime with organism-first evolution"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "organism-framework" }]
dependencies = [
  "hydra-core>=1.3.2",
  "matplotlib>=3.8.0",
  "omegaconf>=2.3.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "pytest>=8.0.0",
]

[project.optional-dependencies]
audio = ["torchaudio>=2.2.0"]
hf = ["datasets>=2.18.0", "transformers>=4.40.0"]
lora = ["datasets>=2.18.0", "transformers>=4.40.0", "peft>=0.11.0", "bitsandbytes>=0.43.0"]
evolve = [
  "openai>=1.40.0",
  "anthropic>=0.49.0",
  "psutil>=5.9.8",
  "transformers>=4.40.0",
  "accelerate>=0.33.0",
  "safetensors>=0.4.3",
  "sentencepiece>=0.2.0",
  "plotly>=5.20.0",
  "comet_ml>=3.40.0",
]
shinka_baseline = ["shinka-evolve>=0.0.4"]
# Optional extra for the co_bench experiment family. CO-Bench itself is NOT a
# pip package — clone it (see scripts/bootstrap_cobench.sh) and put it on
# COBENCH_ROOT / third_party/CO-Bench. These are the dataset-download +
# solver dependencies the six targeted tasks need (TSP, bin packing,
# multidimensional knapsack, set covering, graph colouring, job shop).
co_bench = [
  "huggingface_hub>=0.23.0",
  "numpy>=1.24",
  "ortools>=9.7",
  "networkx>=3.1",
  "pulp>=2.7",
  "scipy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api_platforms*", "experiments*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
